--- a/api/package.json
+++ b/api/package.json
@@ -14,9 +14,11 @@
   "author": "Mathieu ACKERMAANN",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
@@ -25,8 +27,10 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^24.10.0",
     "nodemon": "^3.1.10",
     "sequelize-cli": "^6.6.3",
